mudando o local do type module no script app js

--- a/cadastro.html
+++ b/cadastro.html
@@ -80,6 +80,6 @@
         </section>
     </main>
 
-    <script src="js/app.js" type="module"></script>
+    <script type="module" src="js/app.js" ></script>
 </body>
 </html>
